# DS4400-Project

./: .gitignore  pyproject.toml  train_all.py
src/main/: compare.py  data.py  eda.py  evaluate.py
src/main/models/XGBoost/: model.py  train.py
src/main/models/cnn/: generate_spectrograms.py  model.py  train.py
src/main/models/neuralNetwork/: model.py  train.py
src/main/models/randomForest/: model.py  train.py
src/main/novel/: model_routing.py
