[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "xgboost>=3.2.0",
]
